  On Windows, prevent erroneously waiting for an unbounded time in Unix.select
  if more than 64 file descriptors per lists are watched, or if watching
  non-socket file descriptors, and a timeout longer than $2^{32}$ milliseconds
  is used. Cap the timeout to $2^{32}$ milliseconds.
  (Antonin Décimo, review by Gabriel Scherer and Miod Vallat)

### Tools:

- #12019: ocamlc: add `align_double` and `align_int64` to `ocamlc -config`
  output.
  (Romain Beauxis, review by David Allsopp)

- #12642, #13536: in the toplevel, print shorter paths for constructors
  and labels when only some modules along their path are open.
  (Gabriel Scherer, review by Florian Angeletti)

- #13686: Fix Python debugger extensions (for LLDB and GDB) to restore
  functionality broken by #13272.
  (Nick Barnes, review by Tim McGilchrist Gabriel Scherer)

- #13199, #13485: Support running native debuggers in ocamltest.
  (Tim McGilchrist and Sebastien Hinderer, review by Sebastien Hinderer,
   Gabriel Scherer and Antonin Décimo)

- #13764, #13779: add missing "-keywords" flag to ocamldep and ocamlprof
  (Florian Angeletti, report by Prashanth Mundkur, review by Gabriel Scherer)

- #13877: ocamldoc, add a `-latex-escape-underscore` flag to control the
  escaping of `_` underscore in latex references (in order to be able to match
  odoc behaviour).
  (Florian Angeletti, review by Gabriel Scherer)

- #13906: Add support for a `multicore` tag in ocamltest and use it for
  tests that fail on mono-core systems.
  (Stéphane Glondu, review by Nicolás Ojeda Bär)

### Manual and documentation:

- #13694: Fix name for caml_hash_variant in the C interface.
  (Michael Hendricks)

- #13732: Document that custom finalizers must not access the OCaml heap, etc.
  (Josh Berdine, review by Stephen Dolan and Guillaume Munch-Maccagnoni)

### Compiler user-interface and warnings:

- #13428: support dump=[source | parsetree | lambda | ... | cmm | ...]
  in OCAMLRUNPARAM
  (Gabriel Scherer, review by Vincent Laviron)