@@ -275,6 +275,13 @@ Working version
   is used. Cap the timeout to $2^{32}$ milliseconds.
   (Antonin Décimo, review by Gabriel Scherer and Miod Vallat)
 
+- #13921: Set cloexec correctly on CRT file descriptors created by the Unix
+  library on Windows. The inheritance on the underlying Win32 handles was
+  correctly set, but the book-keeping for the CRT was leaking the value of
+  non-inherited handles which combined with re-use of HANDLE values within
+  processes could appear to make a CRT file descriptor "re-open".
+  (David Allsopp, review by Nicolás Ojeda Bär)
+
 ### Tools:
 
 - #12019: ocamlc: add `align_double` and `align_int64` to `ocamlc -config`
